// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable rendering renders clickable row 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table DataTable--clickable"
    fixedLayout={true}
    id="test-table"
    role="grid"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <TableRow
        className=""
        data-index={0}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders focused row 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="id"
        selected={false}
        tabIndex={0}
      >
        <TableCell
          className={null}
          title=""
        >
          10
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a4
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site"
        >
          site
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders highlighted row 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className="DataTable--highlight"
        data-index={0}
        id="id"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          10
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a4
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site"
        >
          site
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders loading spinner when loading initial data 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    />
  </Table>
  <Spinner
    aria-label="Loading"
    id="test-loading"
    role="status"
    size="large"
  />
</TableScrollWrapper>
`;

exports[`DataTable rendering renders next spinner when fetchingNextPage is true 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
      <TableRow>
        <TableCell
          align="left"
          className="DataTable__spinner"
          colSpan={3}
        >
          <Spinner
            aria-label="Loading"
            role="status"
            size="tiny"
          />
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders previous spinner when fetchingPrevPage is true 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow>
        <TableCell
          align="left"
          className="DataTable__spinner"
          colSpan={3}
        >
          <Spinner
            aria-label="Loading"
            role="status"
            size="tiny"
          />
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={0}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders selected row 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="id"
        selected={true}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          10
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a4
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site"
        >
          site
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders the expected elements if the data is empty 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    />
  </Table>
  <TableEmpty
    id="test-tableMessage"
  >
    Empty text
  </TableEmpty>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders the expected elements if there is data 1`] = `
<TableScrollWrapper
  className="DataTable TestClass"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder="a"
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders the expected elements in descending order 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder="d"
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders the expected elements using a secondary key 1`] = `
<TableScrollWrapper
  className="DataTable"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="time"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          TIME
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder="a"
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass0"
          title="site4"
        >
          site4
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
        <TableCell
          className="TestClass1"
          title="site1"
        >
          site1
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
        <TableCell
          className="TestClass2"
          title="site2"
        >
          site2
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
        <TableCell
          className="TestClass3"
          title="site3"
        >
          site3
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className={null}
          title=""
        >
          1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
        <TableCell
          className="TestClass4"
          title="site5"
        >
          site5
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;

exports[`DataTable rendering renders the expected elements when columns is set 1`] = `
<TableScrollWrapper
  className="DataTable TestClass"
  id="test"
  tabIndex="-1"
>
  <Table
    className="DataTable__table"
    fixedLayout={true}
    id="test-table"
    role="table"
    rowMode="line"
    stickyHeader={true}
  >
    <TableHead
      onClick={[Function]}
    >
      <TableRow>
        <TableHeader
          data-column="site"
          sortOrder={null}
          sortable={false}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SITE
        </TableHeader>
        <TableHeader
          data-column="source"
          sortOrder={null}
          sortable={true}
          style={
            Object {
              "width": "10px",
            }
          }
        >
          SOURCE
        </TableHeader>
      </TableRow>
    </TableHead>
    <TableBody
      onClick={null}
      onKeyDown={null}
      onKeyUp={null}
      onMouseDown={null}
    >
      <TableRow
        className=""
        data-index={0}
        id="r1"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className="TestClass0"
          title="site3"
        >
          site3
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a10
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={1}
        id="r2"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className="TestClass1"
          title="site5"
        >
          site5
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          b10
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={2}
        id="r0"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className="TestClass2"
          title="site4"
        >
          site4
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={3}
        id="r4"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className="TestClass3"
          title="site1"
        >
          site1
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          A1
        </TableCell>
      </TableRow>
      <TableRow
        className=""
        data-index={4}
        id="r3"
        selected={false}
        tabIndex={-1}
      >
        <TableCell
          className="TestClass4"
          title="site2"
        >
          site2
        </TableCell>
        <TableCell
          className={null}
          title=""
        >
          a1
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</TableScrollWrapper>
`;
